manifests/gateway/service.yml
apiVersion: v1
kind: Service
metadata:
  name: iot-gateway
spec:
  selector:
    app: iot-gateway
  type: LoadBalancer
  loadBalancerIP: 195.154.71.170
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
